-Version 1.1.8
* Full open to Rcpp
* add functions to move from qx to mx and vice versa