@@ -4,14 +4,21 @@
 ###############################################################################
 
 
-# display version number and date when the package is loaded
+# loading the markovchain package
+
 .onAttach <- function(libname, pkgname) {
-	desc  <- packageDescription(pkgname, libname)
-	packageStartupMessage(
-			'Version:  ', desc$Version, '\n', 
-			'Date:     ', desc$Date, '\n',
-			'Author:   ', 'Giorgio Alfredo Spedicato Ph.D C.Stat ACAS \n with significant contributions from Reinhold Kainhofer and Kevin J. Owens'
-	)
+  desc  <- packageDescription(pkgname, libname)
+  packageStartupMessage('Package:  ', desc$Package, '\n',
+                        'Authors:  ', desc$Author, '\n',
+                        'Version:  ', desc$Version, '\n', 
+                        'Date:     ', desc$Date, '\n',
+                        'BugReport: ', desc$BugReports, '\n')
+}
+
+# for unloading dynamic libraries
+
+.onUnload <- function (libpath) {
+  library.dynam.unload("lifecontingencies", libpath)
 }
 
 # onload function: registering the vignette engine
