@@ -8,6 +8,15 @@
   url = {http://www.R-project.org/}
 }
 
+@Article{pkg:testthat,
+    author = {Hadley Wickham},
+    title = {testthat: Get Started with Testing},
+    journal = {The R Journal},
+    year = {2011},
+    volume = {3},
+    pages = {5--10},
+    url = {http://journal.r-project.org/archive/2011-1/RJournal_2011-1_Wickham.pdf}
+  }
 
 @Book{RcppR,
   title = {Seamless {R} and {C++} Integration with {Rcpp}},
