@@ -1,3 +1,4 @@
 -Version 1.1.8
+* Christophe Dutang added to contributors
 * Full open to Rcpp
 * add functions to move from qx to mx and vice versa
